# Elm327Terminal

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
src/: CMakeLists.txt  main.cpp  resources.qrc
src/commands/: Command.h  CommandStore.cpp  CommandStore.h
src/controllers/: AppController.cpp  AppController.h
src/decoder/: Candecoder.cpp  Candecoder.h  Decoder.cpp  Decoder.h  ExprEval.h  Filter.h  FilterStore.cpp  FilterStore.h  filters.json
src/scenarios/: Scenario.h  ScenarioRunner.cpp  ScenarioRunner.h  ScenarioStore.cpp  ScenarioStore.h
src/serial/: AutoConnectWorker.cpp  AutoConnectWorker.h  IConnection.h  SerialConnection.cpp  SerialConnection.h
src/style/: AppStyle.h
src/tester/: Test.h  TestModule.cpp  TestModule.h
src/ui/: CommandDialog.cpp  CommandDialog.h  CommandPanel.cpp  CommandPanel.h  ConnectionPanel.cpp  ConnectionPanel.h  DecoderPanel.cpp  DecoderPanel.h  ErrorPanel.cpp  ErrorPanel.h  MainWindow.cpp  MainWindow.h  ScenarioDialog.cpp  ScenarioDialog.h  ScenarioPanel.cpp  ScenarioPanel.h  StyleManager.cpp  StyleManager.h  TerminalPanel.cpp  TerminalPanel.h  TitleBar.cpp  TitleBar.h
